SystemUI: Transparency bar default changed
Change-Id: I0f484632f1a1b960faee0f17481c345ae1be6c44