@@ -211,8 +211,7 @@ public class TransparencyManager {
     protected void updateSettings() {
         ContentResolver resolver = mContext.getContentResolver();
 
-        final float defaultAlpha = new Float(mContext.getResources().getInteger(
-                R.integer.navigation_bar_transparency) / 255);
+        final float defaultAlpha = Float.valueOf(mContext.getResources().getInteger(R.integer.navigation_bar_transparency)) / 255;
         String alphas[];
         String settingValue = Settings.System.getString(resolver,
                 Settings.System.NAVIGATION_BAR_ALPHA_CONFIG);
